--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -1,7 +1,7 @@
 ---
 id: light-hotspots
-title: Light Hotspots (Beta)
-sidebar_label: Light Hotspots (Beta)
+title: Light Hotspot Project (Beta)
+sidebar_label: Light Hotspot Project
 slug: /mine-hnt/light-hotspots
 ---
 
@@ -9,47 +9,44 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Light Hotspots - Beta
 
-This document describes the architecture and technical roadmap planned for Light Hotspots.
+This document describes the architecture and technical roadmap planned for converting exisiting Approved Hotspots to Light Hotspots. As part of this migration, we will also introduce a new Hotspot variant onto the network, called a Data Only Hotspot (more below).
 
 :::warning
 
-Everything here is very much beta and subject to change. 
+This project is in progress and subject to change. 
 
 :::
 
 :::info
 
-For real-time development and community support of Light Hotspots, please join the #gateway channel on [Helium Discord](https://discord.gg/helium)
-
-:::
-
-## Light Hotspot Setup Guides
-
-- [Dragino LPS80/DLOS8](/mine-hnt/light-hotspots/guides/dragino)
-  * Draginos will only mine HNT as a non-PoC Light Hotspot
-- [Kerlink gateways](/mine-hnt/light-hotspots/guides/kerlink)
-  * Kerlink gateways will only mine HNT as a non-PoC Light Hotspot unless it is specified as a Helium-Compatible Kerlink Miner.
-
-
-:::info
-
-Gateways running a Packet Forwarder and Miner is not considered a Light Hotspot and will never earn HNT.
+For real-time development and community support of Data Only Hotspots and Light Hotspots, please join the #gateway channel on [Helium Discord](https://discord.gg/helium)
 
 :::
 
 ## What is a Light Hotspot?
 
-Light Hotspots are the evolution of how physical LoRaWAN gateways will interact with the Helium blockchain. Since the genesis block, the Helium blockchain has run entirely on the physical Hotspot itself. This is no small feat, especially considering it's now running on [tens of thousands of globally-distributed Hotspots](https://explorer.helium.com/hotspots). But in the interest of greater scalability and security, the Helium blockchain needs to be moved off of the physical Hotspots and onto more robust cloud-based servers ([called Validators](/mine-hnt/validators), being developed in parallel). This will simplify the architecture immensely, an enable us to grow the Network exponentially while keeping blocktimes and epochs stable. And, over time, it will enable just about any LoRaWAN gateway to join the Helium Network, provide coverage, and mine HNT. 
+Light Hotspots are the evolution of how LoRaWAN gateways will interact with the Helium blockchain. Since the genesis block, the Helium blockchain has run entirely on the physical Hotspot itself. As the blockchain network grows, each Hotspot running a full node undergoes increasing load and are starting to fall out of sync due to the higher compute requirements. 
+
+To mitigate this, the Hotspot's consensus work will be moved off of physical Hotspots and onto Validators. This will simplify the architecture immensely, an enable us to grow the Network exponentially while keeping blocktimes and epochs stable. 
+
+As all approved Hotspots transition to a Light Hotspot architecture, we also introduce a new type of Hotspot known as Data Only Hotspots to satisfy the increasing demand and continue to expand network coverage.
 
 ## Light Hotspot Properties
 
 When Light Hotspots are fully developed and in production (which will happen with the completion of Milestone 4 detailed below) they will satisfy the following properties:
 
 * A Hotspot on the Helium network that, via [Validators](/mine-hnt/validators), can participate in PoC beacons and witnesses, and forwards data packets;
-* Does not store a copy of the Blockchain;
-* Does not create challenges (instead relies on Validators to create challenges on their behalf);
-* Does not participate in Consensus Groups (again, relies on Validators for block production);
-* Will be eligible to earn $HNT for all [packet forwarding and all POC-related mining rewards](/blockchain/mining/#how-do-hotspots-earn-helium-tokens) except for the Consensus Group rewards (which will only be mined by Validators). 
+* Does not store a copy of the Blockchain, eliminating synchronization;
+* Does not create challenges (relies on Validators to create challenges on their behalf);
+* Does not participate in Consensus Groups (relies on Validators for block production);
+* Will be eligible to earn $HNT(see table below)
+
+### Data Only Hotspots
+With the introduction of the Light Hotspot, we also introduce a new type of Hotspot Miner on the Helium Network, namely a Data Only Hotspot that is a LoRaWAN Gateway running gateway-rs, that earns $HNT for device packet transfer. 
+
+
+<img src={useBaseUrl("img/mine-hnt/light-hotspot-table.png")} />
+
 
 ## Architecture 
 
@@ -64,6 +61,8 @@ The bulk of the code that enables Light Hotspots on actual LoRaWAN gateways is c
 
 Development of this code takes place in the above GitHub repo, as well at the `#gateway` channel on the [Helium Discord Server](https://discord.gg/helium).
 
+
+
 ## Development Milestones 
 
 The development of Light Hotspots will be broken up into the five following milestones. 
@@ -74,7 +73,7 @@ The development of Light Hotspots will be broken up into the five following mile
 * **Target Completion Date: March 18**
 * **Status: COMPLETE**
 
-At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](https://github.com/helium/gateway-rs) can route packets to and from the Helium Network **but not earn HNT.** This means an DIY gateway can send and receive data on the Network. These LoRaWAN Gateways running Gateway-rs are known as "non-PoC Light Hotspots".
+At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](https://github.com/helium/gateway-rs) can route packets to and from the Helium Network **but not earn HNT.** This means an DIY gateway can send and receive data on the Network. These LoRaWAN Gateways running Gateway-rs are known as Data Only Hotspots.
 
 
 ### Milestone 1.5 
@@ -83,43 +82,55 @@ At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](http
 * **Target Completion: June**
 * **Status: IN DEVELOPMENT**
 
-At the completion of Milestone 1.5, non-PoC Light Hotspots (aka LoRaWAN gateway running gateway-rs) can be added to the blockchain, assert its location, and be seen on explorer.helium.com. These non-PoC Light Hotspots will *not* participate in Proof-of-Coverage.
+At the completion of Milestone 1.5, Data Only Hotspots can be added to the blockchain, assert its location, and be seen on explorer.helium.com. 
 
-Non-PoC Light Hotspots can be added to the blockchain by paying a $20 Add Gateway transaction fee, and a $10 Assert location transaction fee.
-
-At this phase, these non-PoC Light Hotspots onboarded using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs), and **will not earn any HNT**. 
+Data Only Hotspots are added to the blockchain by paying a $5 Add Gateway transaction fee, and a $10 Assert location transaction fee using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs) and will not earn $HNT.
 
 ### Milestone 2
-#### Paid Packet Forwarding
+#### Earn HNT For Device Packet Transfer
 
 * **Target Completion: Summer 2021**
 * **Status: NOT YET STARTED**
 
-Non-PoC Light Hotspots added to the blockchain will start earning HNT for packet forwarding.
-
+Data Only Hotspots will earn $HNT for device data transfer.
 
 ### Milestone 3
-#### Earn HNT for PoC
+#### Introduction of Light Hotspots
 
 * **Target Completion: Post Milestone 2**
 * **Status: NOT YET STARTED**
 
-At this point, Light Hotspots from [HIP19-approved manufacturers](/mine-hnt/hotspot-makers/approved-makers) will be able to earn HNT for PoC. (Kerlink is the first approved maker to submit a [light hotspot design](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md).) And onboarding for these Light Hotspots will be done via the standard Helium Wallet app onboarding. The fees will be equivalent to Full Hotspots ($40 and $10 for add assert, respectively). 
+At this point, Approved Hotspots from [HIP19-approved manufacturers](/mine-hnt/hotspot-makers/approved-makers) with lower compute requirements can be added to the network and participate in PoC. (Kerlink is the first approved maker to submit a [light hotspot design](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md).) 
+
+Onboarding for these Light Hotspots will be done via the standard Helium Wallet app onboarding. The fees will be equivalent to other Approved Hotspots ($40 and $10 for add assert, respectively). 
 
 At this stage, there will be three types of Hotspots:
 
-1. Full Hotspot (HIP-19 approved, earns HNT for PoC and Packet Forwarding, follows Blockchain)
-2. Light Hotspot (HIP-19 approved, earns HNT for PoC and Packet Forwarding)
-3. Non-PoC Light Hotspot (not HIP-19 approved, earns HNT for Packet Forwarding)
+1. Approved Hotspot (HIP-19 approved, earns HNT for PoC and Data Transfer, follows Blockchain)
+2. Light Hotspot (HIP-19 approved, earns HNT for PoC and Data Transfer)
+3. Data Only Hotspot (DIY LoRaWAN Gateway, earns HNT for Data Transfer)
 
 ### Milestone 4
-#### All Hotspots Operate as Light Hotspots
+#### All Approved Hotspots Operate as Light Hotspots
 
 * **Target Completion: Post Milestone 3**
 * **Status: NOT YET STARTED**
 
-In the final milestone, all existing Hotspots on the Network will be converted to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent on Validators to generate challenges and process witness receipts.
+In the final milestone, all Approved Hotspots on the Network will be converted to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent on Validators to generate challenges and process witness receipts.
 
 All Hotspots will not need to follow the Blockchain.
 
 
+## Data-Only Hotspot Setup Guides
+
+- [Dragino LPS80/DLOS8](/mine-hnt/light-hotspots/guides/dragino)
+  * Draginos will only mine HNT as a Data Only Hotspot
+- [Kerlink gateways](/mine-hnt/light-hotspots/guides/kerlink)
+  * Kerlink gateways will only mine HNT as Data Only Hotspot unless it is specified as a Helium-Compatible Kerlink Miner.
+
+
+:::info
+
+Gateways running a Packet Forwarder and Miner is not considered a Light Hotspot and will never earn HNT.
+
+:::
